# keybase-api

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  shell.nix
.github/actions-rs/: grcov.yml
.github/workflows/: cargo-build.yml  cargo-test.yml  code-converage.yml  code-coverage.yml  rust.yml  tarpaulin-codecov.yml
src/: keybase.rs  lib.rs
src/keybase/: cmd.rs  error.rs
