[package]
name = "keybase-api"
version = "0.1.0"
authors = ["David Haukeness <david@hauken.us>"]
edition = "2018"
description = "Create rust apps for Keybase"
readme = "README.md"
keywords = ["keybase"]
categories = ["api-bindings"]
license = "GNU General Public License v3.0"
repository = "https://github.com/haukened/keybase-api"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.42"
futures = "0.3.8"
serde_json = "1.0.60"
thiserror = "1.0.22"
tracing = "0.1.22"
tracing-futures = "0.2.4"

[dependencies.tokio]
version = "1.0.0"
features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "sync", "fs"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]